syntax = "proto3";

option go_package = "github.com/Dpbm/jobs_server";

service Jobs{
	rpc AddJob (stream JobData) returns (PendingJob) {}
}

message JobData{
	string qasm = 1;
	bool resultTypeCounts = 2;
	bool resultTypeQuasiDist = 3;
	bool resultTypeExpVal = 4;
	string targetSimulator = 5;
	optional string metadata = 6;
}

message PendingJob{
	string id = 1;
}
